<?xml version="1.0"?>
<package format="2">

  <name>bb8</name>
  <version>0.0.0</version>
  <description>The bb8 central control package</description>

  <maintainer email="fabrizio.cortesi@stud.fhgr.ch">Fritz_179</maintainer>

  <license>MIT</license>
  <url type="website">https://github.com/Fritz179/BB8</url>


  <depend>rplidar_ros</depend>
  <depend>cartographer_ros</depend>
  <depend>mpu6050_driver</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
