<?xml version="1.0"?>
<package format="2">
  <name>bb8_zero</name>
  <version>0.0.0</version>
  <description>The bb8_zero package</description>

  <maintainer email="fabrizio.cortesi@stud.fhgr.ch">Fritz_179</maintainer>

  <license>MIT</license>
  <url type="website">https://github.com/Fritz179/BB8</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>nav_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_depend>libpigpiod-if-dev</build_depend>
  <exec_depend>libpigpiod-if-dev</exec_depend>

  <depend>robot_localization</depend>

</package>
