<?xml version="1.0"?>
<package format="2">
  <name>tb6612fng</name>
  <version>0.0.0</version>
  <description>The tb6612fng package</description>

  <maintainer email="fabrizio.cortesi@stud.fhgr.ch">Fritz_179</maintainer>

  <license>MIT</license>
  <url type="website">https://github.com/Fritz179/BB8</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pigpio</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pigpio</exec_depend>

</package>
